--- a/index.html
+++ b/index.html
@@ -50,13 +50,27 @@
 
 <div class="registration-form">
     <h2>Регистрация</h2>
-    <form action="/submit_registration" method="POST">
+    <form id="registrationForm">
         <input type="text" name="name" placeholder="Имя" required>
         <input type="number" name="age" placeholder="Возраст" required>
         <textarea name="about" placeholder="Расскажите о себе" rows="4" required></textarea>
         <button type="submit">Зарегистрироваться</button>
     </form>
 </div>
+
+<script>
+    document.getElementById('registrationForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+        const form = e.target;
+        const data = {
+            name: form.name.value,
+            age: form.age.value,
+            about: form.about.value
+        };
+        window.Telegram.WebApp.sendData(JSON.stringify(data));
+        alert('Регистрация успешна!');
+    });
+</script>
 
 </body>
 </html>
