--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
             age: form.age.value,
             about: form.about.value
         };
+        // Отправка данных в Telegram-бота
         window.Telegram.WebApp.sendData(JSON.stringify(data));
+        // Уведомление пользователя
         alert('Регистрация успешна!');
+        // Редирект на другую страницу
+        window.location.href = "https://sh1zzuk1.github.io/submit_registration";
     });
 </script>
 
