--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
             age: form.age.value,
             about: form.about.value
         };
-        // Вместо этого кода перенаправляем на следующую страницу
-        // window.Telegram.WebApp.sendData(JSON.stringify(data));
-        // alert('Регистрация успешна!');
-        // window.location.href = "https://sh1zzuk1.github.io/submit_registration";
-        // Перенаправление на следующую страницу
-        window.location.href = "https://sh1zzuk1.github.io/submit_registration";
+        // Перенаправление на адрес, который является продолжением текущего URL
+        const currentUrl = window.location.href;
+        const nextUrl = currentUrl + "submit_registration";
+        window.location.href = nextUrl;
     });
 </script>
 
