--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 // Проверка параметра tg_token в URL
         window.onload = function() {
             const params = new URLSearchParams(window.location.search);
-            if (!params.get('tg_token')) {
+            if (!params.get('7384757316:AAGrTA66ZXXYCyGSkhUtO_hzUn0XHpaLDRM')) {
                 document.body.innerHTML = '<h1>Доступ запрещен. Пожалуйста, используйте Telegram бот для доступа к этому сайту.</h1>';
             }
         };
