--- a/index.html
+++ b/index.html
@@ -120,43 +120,6 @@
 </div>
 
 <script>
-    // Функция для извлечения chat_id из URL-адреса
-    function getChatIdFromUrl() {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get('chat_id');
-    }
-
-    // Функция для отправки данных в бота Telegram
-    async function register(event) {
-        event.preventDefault();
-
-        const form = document.getElementById('regForm');
-        const formData = new FormData(form);
-        const chatId = getChatIdFromUrl(); // Получаем chat_id из URL
-
-        // Ваш код для отправки данных в бота Telegram, используя chatId
-
-        // Пример отправки данных
-        try {
-            const response = await fetch(`https://api.telegram.org/bot<7384757316:AAGrTA66ZXXYCyGSkhUtO_hzUn0XHpaLDRM>/sendMessage`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    chat_id: chatId,
-                    text: `Регистрация успешна! Ваши данные: ...` // Ваши данные для отправки
-                })
-            });
-            const responseData = await response.json();
-            console.log('Ответ от сервера Telegram:', responseData);
-        } catch (error) {
-            console.error('Ошибка при отправке данных в Telegram:', error);
-        }
-
-        // Ваш код для отображения сообщения об успешной регистрации
-    }
-
     // Объект с данными о городах для каждой страны
     const citiesData = {
         "Россия": ["Москва", "Санкт-Петербург", "Новосибирск", "Екатеринбург"],
@@ -183,6 +146,90 @@
                 option.value = city;
                 citySelect.appendChild(option);
             });
+        }
+    }
+
+    // Функция для получения chat_id из Telegram API
+    async function getChatId() {
+        const response = await fetch(`https://api.telegram.org/bot7384757316:AAGrTA66ZXXYCyGSkhUtO_hzUn0XHpaLDRM/getUpdates`);
+        const data = await response.json();
+        const chatId = data.result[0].message.chat.id;
+        return chatId;
+    }
+
+    // Функция для регистрации
+    async function register(event) {
+        event.preventDefault(); // Предотвращаем отправку формы по умолчанию
+
+        // Проверяем, все ли обязательные поля заполнены
+        const form = document.getElementById('regForm');
+        const formData = new FormData(form);
+        let isValid = true;
+        formData.forEach((value, key) => {
+            if (!value) {
+                isValid = false;
+            }
+        });
+
+        if (isValid) {
+            // Если все поля заполнены, скрываем форму и отображаем сообщение об успешной регистрации
+            document.getElementById('registrationForm').style.display = 'none';
+            document.getElementById('successMessage').style.display = 'block';
+            releaseHearts(event);
+
+            // Получаем chat_id и отправляем данные в Telegram бот
+            const chatId = await getChatId();
+            const data = {
+                name: formData.get('name'),
+                gender: formData.get('gender'),
+                looking_for: formData.get('looking_for'),
+                age: formData.get('age'),
+                about: formData.get('about'),
+                country: formData.get('country'),
+                city: formData.get('city')
+            };
+
+            try {
+                await fetch(`https://api.telegram.org/bot7384757316:AAGrTA66ZXXYCyGSkhUtO_hzUn0XHpaLDRM/sendMessage`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        chat_id: chatId,
+                        text: `Регистрация успешна! \nВаши данные:\nИмя: ${data.name},\nПол: ${data.gender},\nИщете: ${data.looking_for},\nВозраст: ${data.age},\nО себе: ${data.about},\nСтрана: ${data.country},\nГород: ${data.city}`
+                    })
+                });
+            } catch (error) {
+                console.error('Ошибка при отправке данных в Telegram:', error);
+            }
+        } else {
+            // Если есть незаполненные обязательные поля, отображаем сообщение об ошибке
+            alert('Пожалуйста, заполните все обязательные поля.');
+        }
+    }
+
+    // Функция для создания частиц-сердечек
+    function releaseHearts(event) {
+        const button = event.target;
+        const rect = button.getBoundingClientRect();
+        const buttonCenterX = rect.left + rect.width / 2;
+        const buttonCenterY = rect.top + rect.height / 2;
+
+        for (let i = 0; i < 30; i++) {
+            const heart = document.createElement('div');
+            heart.classList.add('heart');
+            document.body.appendChild(heart);
+            heart.style.left = `${buttonCenterX}px`;
+            heart.style.top = `${buttonCenterY}px`;
+
+            const angle = Math.random() * 2 * Math.PI;
+            const distance = Math.random() * 100;
+            heart.style.transform = `translate(${Math.cos(angle) * distance}px, ${Math.sin(angle) * distance}px)`;
+
+            setTimeout(() => {
+                heart.remove();
+            }, 1000);
         }
     }
 </script>
